<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="currentUser"
            type="com.example.layouts1.User" />
    </data>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sportRecorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_text"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@={currentUser.name}"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_user_text"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userPlaceHolderInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint"
        style="@style/inputStyle" />

    <Button
        android:id="@+id/changeUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_user_button"
        style="@style/buttonStyle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/what_sport_text"
        android:textColor="#673AB7"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/yourSportInput"
        style="@style/inputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sport_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/distanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance_hint"
        android:inputType="numberDecimal"
        style="@style/inputStyle"/>

    <EditText
        android:id="@+id/durationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/duration_hint"
        android:inputType="time"
        style="@style/inputStyle"/>

    <EditText
        android:id="@+id/dateInput"
        style="@style/inputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/saveButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/instructions_text" />

    </ScrollView>

</LinearLayout>
</layout>